--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ant-design-vue": "^3.2.4",
     "axios": "^0.27.2",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
