--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
+    "vue-virtual-scroll-grid": "^1.7.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
