--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^3.2.4",
     "axios": "^0.27.2",
+    "pinia": "^2.0.14",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
     "vue-virtual-scroll-grid": "^1.7.0",
