--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ant-design-vue": "^3.2.4",
     "axios": "^0.27.2",
     "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
@@ -24,7 +25,9 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "less": "^4.1.2",
     "prettier": "^2.5.1",
+    "sass": "^1.52.2",
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
