--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "target": "ES2020"
+    "target": "es2020",
+    "lib": [
+      "es2020"
+  ],
   },
 
   "references": [
